# paypal/domain/models/subscription.go
@@ -1,0 +1,6 @@
+package models
+
+type Subscription struct {
+	Email      string `json:"email"`
+	CardNumber string `json:"card_number" db:"card_number"`
+}
